# scriptorium

./: .gitignore  HOWTO.md  LICENSE  README.md  pyproject.toml
catalogue-app/: README.md
catalogue-cli/: pyproject.toml
catalogue-cli/src/catalogue/cli/: backfill_ol_work_key.py  backup.py  books_by_subject.py  build_content_index.py  cip_promote.py  edition_dedup.py  edition_structure.py  exclude_purge.py  fetch_covers.py  normalize_covers.py  rehash.py  segment_detect.py  smoke.py  subject_backfill.py  sweep_dangling_refs.py  sweep_orphan_covers.py  verify.py  work_dedup.py  work_detect.py  works_apply.py
catalogue-packages/access-api/: pyproject.toml
catalogue-packages/access-api/src/catalogue/access_api/: __init__.py  _crud.py  _files.py  _leaf.py  backing.py  caches.py  capture.py  collections.py  external_deps.py  gateway.py  gloss_cache.py  ingest_ignore.py  journal.py  reading_position.py  registry.py  review_queue.py  scan_ocr.py  scan_ocr_access.py  section_cache.py  session.py  starred.py  subjects.py  sweep_state.py  tool_policy.py  tradition_classify.py  traditions.py  vocab.py  wishlist.py
catalogue-packages/access-api/src/catalogue/access_api/editions/: __init__.py  reads.py  store.py  writes.py
catalogue-packages/access-api/src/catalogue/access_api/health/: __init__.py  store.py  sweep.py
catalogue-packages/access-api/src/catalogue/access_api/holdings/: __init__.py  reads.py  store.py  writes.py
catalogue-packages/access-api/src/catalogue/access_api/integrations/: __init__.py  buddhistllm.py
catalogue-packages/access-api/src/catalogue/access_api/persons/: __init__.py  reads.py  store.py  writes.py
catalogue-packages/access-api/src/catalogue/access_api/works/: __init__.py  reads.py  store.py  writes.py
catalogue-packages/contracts/: pyproject.toml
catalogue-packages/contracts/src/catalogue/contracts/: __init__.py  authz.py  conformance.py  dto.py  errors.py  external_dep.py  fields.py  impact.py  integrity.py  orphan_policy.py  refs.py
catalogue-packages/contracts/tests/: test_conformance.py
catalogue-packages/db-store/: pyproject.toml
catalogue-packages/db-store/src/catalogue/db_store/: __init__.py  authority_vocab.py  connection.py  contributor_store.py  db.py  external_contract.py  external_read_contract.json  integrity.py  migrate_frbr.py  migrate_tenet.py  migrate_tradition.py  paths.py  reader_state.py  reader_sync_contract.json  reader_sync_contract.py  schema.sql  signature.py  store.py  vocab.json
catalogue-packages/populate/: pyproject.toml
catalogue-packages/populate/src/catalogue/populate/: __init__.py  run_load.py  run_resolve.py  run_step4.py
catalogue-packages/services/: pyproject.toml
catalogue-packages/services/src/catalogue/services/: apikeys.py  bdrc.py  book_analysis.py  book_identifier.py  bookfile.py  capture_reconcile.py  catalogue_review.py  cip.py  classify.py  classify_person_tradition.py  classify_tradition.py  cloudsync.py  contributor_edit.py  contributor_undo.py  contributors.py  covers.py  dangling_refs.py  detect.py  digitize.py  edition_consolidate.py  edition_resolve.py  edition_structure.py  edition_verify.py  entity_undo.py  export_content_index.py  export_replica.py  extract.py  features.py  filing.py  honorifics.py  http_util.py  inbox.py  intake_match.py  isbn.py  library.py  llm.py  local_defaults.py  locator.py  match.py  mount.py  (+43 more)
catalogue-packages/test-kit/: pyproject.toml
catalogue-packages/test-kit/src/catalogue/test_kit/: __init__.py  fakes.py  plugin.py  policies.py  sample.py
catalogue-webui/: pyproject.toml
catalogue-webui/src/catalogue/webui/: annotate_export.py  annotate_ingest.py  app_version.py  ask.py  auth.py  outline_export.py  outline_store.py  pdf_mutation.py  web.py
catalogue-webui/src/catalogue/webui/routes/: __init__.py  _shared.py  api.py  ask.py  bookfiles.py  browse_by_author.py  capture.py  detect.py  editions.py  home.py  library_dashboard.py  people.py  picker.py  reader_sync.py  reconcile.py  review.py  sandbox.py  search.py  settings.py  starred.py  subjects.py  wishlist.py  works.py
catalogue-webui/src/catalogue/webui/static/css/: shelf.css  tokens.css
catalogue-webui/src/catalogue/webui/static/js/: app-version.js  library-core.js  library-ui-dom.js  library-web.js  shelf.js  typeahead.js  web-recent.js
catalogue-webui/src/catalogue/webui/static/pwa/: app.js  content-index.js  manifest.webmanifest  pwa.css  reader.js  sw.js
catalogue-webui/src/catalogue/webui/templates/: _add_work_picker.html  _authority_review.html  _base.html  _book_browser.html  _bulk_assign.html  _bulk_edition_actions.html  _bulk_filing_ux.html  _bulk_mark_reviewed.html  _canonical_block.html  _card_inline_js.html  _cat_id.html  _cover_card.html  _detection_detail.html  _detection_edit.html  _edition_basics.html  _edition_card.html  _edition_card_js.html  _edition_extras.html  _edition_link.html  _edition_summary.html  _edition_title.html  _edition_works.html  _entity_links.html  _filing_panel.html  _holding_fields.html  _library_detail.html  _library_person_detail.html  _library_work_detail.html  _merge_js.html  _merge_widget.html  _online_only.html  _open_control.html  _person_authority_js.html  _person_books.html  _person_card.html  _person_card_js.html  _person_works.html  _picker_candidates.html  _picker_detail.html  _review_bulk.html  (+56 more)
catalogue-webui/src/catalogue/webui/theme/: __init__.py  gen.py  palette.json
docs/: README.md  (+3 more)
(+454 files in other folders)
