[project]
name = "catalogue-webui"
version = "0.0.0"
description = "Flask HTTP server: routes, templates, static, and the concrete auth policy."
requires-python = ">=3.11"
dependencies = [
    "services", "access-api", "db-store", "contracts", "flask>=3",
    "Pillow", "PyMuPDF",   # cover/preview rendering imports PIL + fitz directly
    "perfect-freehand",    # faithful server-side ink outline for "export annotated PDF"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout; PEP 420 namespace — NO src/catalogue/__init__.py, so multiple
# distributions can each contribute under the shared `catalogue.` namespace.
packages = ["src/catalogue"]
