# Phase-0 shell — package boundary only; real code arrives in Phase 1.
[project]
name = "access-api"
version = "0.0.0"
description = "The single DB API: per-concern reader/writer surfaces behind the policy gateway."
requires-python = ">=3.11"
dependencies = ["db-store", "contracts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout; PEP 420 namespace — NO src/catalogue/__init__.py, so multiple
# distributions can each contribute under the shared `catalogue.` namespace.
packages = ["src/catalogue"]
