# Phase-0 shell — package boundary only; real code arrives in Phase 1.
[project]
name = "contracts"
version = "0.0.0"
description = "Shared contracts: DTOs, vocab, errors, authorization (Principal/Policy/Action)."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout; PEP 420 namespace — NO src/catalogue/__init__.py, so multiple
# distributions can each contribute under the shared `catalogue.` namespace.
packages = ["src/catalogue"]
