[project]
name = "db-store"
version = "0.0.0"
description = "DB connections (RO/RW), schema, migrations, vocab seeds, integrity guard."
requires-python = ">=3.11"
dependencies = ["contracts"]

[project.optional-dependencies]
# Fallback if the stdlib sqlite3 is <3.27 or lacks FTS5 (§4.5).
sqlite-fallback = ["pysqlite3-binary"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout; PEP 420 namespace — NO src/catalogue/__init__.py, so multiple
# distributions can each contribute under the shared `catalogue.` namespace.
packages = ["src/catalogue"]
