# Phase-0 shell — package boundary only; real code arrives in Phase 1.
[project]
name = "populate"
version = "0.0.0"
description = "Pipelines that populate the DB: scan sweeps, staging->load, batch import."
requires-python = ">=3.11"
dependencies = ["services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout; PEP 420 namespace — NO src/catalogue/__init__.py, so multiple
# distributions can each contribute under the shared `catalogue.` namespace.
packages = ["src/catalogue"]
