[project]
name = "services"
version = "0.0.0"
description = "Business logic: cataloguing, classification, resolution, sweep, editions, covers, export."
requires-python = ">=3.11"
dependencies = [
    "access-api", "db-store", "contracts",
    # Image/PDF processing for covers, spine detection, and page extraction.
    "Pillow", "PyMuPDF", "numpy", "opencv-python-headless",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout; PEP 420 namespace — NO src/catalogue/__init__.py, so multiple
# distributions can each contribute under the shared `catalogue.` namespace.
packages = ["src/catalogue"]
