[project]
name = "test-kit"
version = "0.0.0"
description = "Shared test kit: pytest fixtures, fake stores, principals/policies, sample data."
requires-python = ">=3.11"
dependencies = ["contracts", "db-store", "access-api"]

# Auto-load the shared fixtures (cat_db / cat_conn / cat_acc) into any package's pytest run
# without an explicit conftest import.
[project.entry-points.pytest11]
catalogue-test-kit = "catalogue.test_kit.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout; PEP 420 namespace — NO src/catalogue/__init__.py, so multiple
# distributions can each contribute under the shared `catalogue.` namespace.
packages = ["src/catalogue"]
